Refactor CMake configuration to simplify toolchain path handling for ARMCLANG and GCC
Change-Id: I2f7dfb14fb213ea8d9e56480c3782db4cc58dc42

--- a/SampleCode/NuMaker-M3334KI/MP3_Player/VSCode/MP3_Player.cproject.yml
+++ b/SampleCode/NuMaker-M3334KI/MP3_Player/VSCode/MP3_Player.cproject.yml
@@ -16,7 +16,7 @@ project:
           -o0,
           -gdwarf-4
         ]
-      ASM: [ -D__MICROLIB ]
+      ASM: [ -D__MICROLIB, -DStack_Size=0x2000 ]
       Link:
         [
           --library_type=microlib,
